RESOLVED FIXED115991
Dropdowns on http://www.exploratorium.edu don't show anything
https://bugs.webkit.org/show_bug.cgi?id=115991
Summary Dropdowns on http://www.exploratorium.edu don't show anything
Simon Fraser (smfr)
Reported 2013-05-12 11:36:25 PDT
Dropdowns on http://www.exploratorium.edu don't show anything
Attachments
Patch (8.28 KB, patch)
2013-05-12 11:39 PDT, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2013-05-12 11:39:36 PDT
Simon Fraser (smfr)
Comment 2 2013-05-12 11:40:20 PDT
Simon Fraser (smfr)
Comment 3 2013-05-12 11:46:30 PDT
Note You need to log in before you can comment on or make changes to this bug.